--- a/jplayer/jplayer.css
+++ b/jplayer/jplayer.css
@@ -1,19 +1,3 @@
-/*
- * Skin for jPlayer Plugin (jQuery JavaScript Library)
- * http://www.jplayer.org
- *
- * Skin Name: Pink Flag
- *
- * Copyright (c) 2012 Happyworm Ltd
- * Dual licensed under the MIT and GPL licenses.
- *  - http://www.opensource.org/licenses/mit-license.php
- *  - http://www.gnu.org/copyleft/gpl.html
- *
- * Author: Silvia Benvenuti
- * Skin Version: 1.1 (jPlayer 2.2.0)
- * Date: 11th September 2012
- */
-
 div.jp-audio,
 div.jp-video {
 
@@ -513,12 +497,12 @@ div.jp-type-playlist div.jp-playlist li:last-child {
 }
 
 div.jp-type-playlist div.jp-playlist a {
-	color: #fff;
+	color: #EEE4C6;
 	text-decoration:none;
 }
 
 div.jp-type-playlist div.jp-playlist a:hover {
-	color: #8B7657;
+	color: #AD9A7C;
 }
 
 div.jp-type-playlist div.jp-playlist li.jp-playlist-current {
