--- a/style.css
+++ b/style.css
@@ -67,11 +67,11 @@ a, a:focus, a:active, a:hover, object, embed {
     
     }
     #menu p:nth-child(1){
-        margin-left: 0px;
+        margin-left: 29px;
         /*background-color: #7BAF69;*/
     }
     #menu p:nth-child(2){
-        margin-left: 29px;
+        margin-left: 0px;
         /*background-color: #7BAF69;*/
     }
     #menu p:nth-child(3){
@@ -95,6 +95,10 @@ a, a:focus, a:active, a:hover, object, embed {
         /*background-color: rgba(170, 141, 74, 0.93);*/
     }
     #menu p:nth-child(8){
+        margin-left: 0px;
+        /*background-color: rgba(170, 141, 74, 0.93);*/
+    }
+    #menu p:nth-child(9){
         margin-left: 0px;
         /*background-color: rgba(170, 141, 74, 0.93);*/
     }
