--- a/style.css
+++ b/style.css
@@ -49,11 +49,17 @@ a, a:focus, a:active, a:hover, object, embed {
         padding-right: 4px;
     }
     #menu p{         
+        background: -moz-linear-gradient(left,  rgba(150,127,87,0) 90%, rgba(62,53,49,0.3) 100%);
+        background: -webkit-gradient(linear, left top, right top, color-stop(90%,rgba(150,127,87,0)), color-stop(100%,rgba(62,53,49,0.3)));
+        background: -webkit-linear-gradient(left,  rgba(150,127,87,0) 90%,rgba(62,53,49,0.3) 100%);
+        background: -o-linear-gradient(left,  rgba(150,127,87,0) 90%,rgba(62,53,49,0.3) 100%);
+        background: -ms-linear-gradient(left,  rgba(150,127,87,0) 90%,rgba(62,53,49,0.3) 100%);
+        background: linear-gradient(to right,  rgba(150,127,87,0) 90%,rgba(62,53,49,0.3) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00967f57', endColorstr='#4d3e3531',GradientType=1 );
+
         display: inline-block;
         border-bottom: 1px solid #4B4536;
         border-right: 2px solid #4B4536;
-        background: linear-gradient(to right, rgba(217, 217, 162, 0) 81%, rgba(62, 53, 49, 0.34));
-        /*background-color: rgb(164, 133, 79); */
         background-color: rgb(150, 127, 87);        
         padding: 6px 6px 3px 6px;
     
@@ -66,6 +72,7 @@ a, a:focus, a:active, a:hover, object, embed {
 
         #menu p:first-child{
             margin-left: 27px;
+            border-top-left-radius: 11% 27%;
         }
         #menu p:nth-child(2){
     
@@ -102,6 +109,7 @@ a, a:focus, a:active, a:hover, object, embed {
             color: #EBE4AF;
             font-size: 1em;
             margin-right: 1px;
+            text-shadow: -1px 0px 1px rgb(59, 51, 47);
         }
 
     #menu a {
@@ -138,7 +146,7 @@ a, a:focus, a:active, a:hover, object, embed {
             transform: scaleY(-1);
 }
 
-a:active #zHeney{
+a:active #zHeney, #contacts p:active, #hat:active {
     -webkit-transform: translate(0, 1px);
        -moz-transform: translate(0, 1px);
             transform: translate(0, 1px);
@@ -183,13 +191,26 @@ a:active #zHeney{
     width: 55%;
 
 }
+    .blue{
+        background: radial-gradient(farthest-side at 54% 370px, #FFF8E4, 'rgba(122, 151, 152, 0)');
+                    linear-gradient(to bottom, rgba(122,151,152,1) 41%,rgba(59,50,46,1) 100%);
+
+        background: -webkit-radial-gradient(54% 370px, circle , rgb(255, 248, 228), rgba(122, 151, 152, 0)),   
+                    -webkit-gradient(linear, left top, left bottom, color-stop(41%,rgb(122, 151, 152)), color-stop(100%,rgb(59, 50, 46)));
+
+        background: -moz-radial-gradient(54% 370px, circle , rgb(255, 248, 228), rgba(122, 151, 152, 0)),   
+                    -moz-linear-gradient(top, rgba(122,151,152,1) 41%, rgba(59,50,46,1) 100%);
+    }
+
     .beige {
-        background: -webkit-radial-gradient(100% 380px, circle closest-corner, rgb(255, 248, 228), rgb(217, 204, 162));
-           background: -moz-radial-gradient(100% 380px, circle closest-corner, rgb(255, 248, 228), rgb(217, 204, 162));
+        background: radial-gradient(farthest-side at 110% 380px, #FFF8E4, #D9CCA2);
+        background: -webkit-radial-gradient(100% 380px, circle closest-corner, #FFF8E4, #D9CCA2);
+           background: -moz-radial-gradient(100% 380px, circle closest-corner, #FFF8E4, #D9CCA2);
     }
     .red {
-        background: -webkit-radial-gradient(110% 380px, circle closest-corner, rgb(217, 204, 85), rgb(196, 80, 80));
-           background: -moz-radial-gradient(110% 380px, circle closest-corner, rgb(217, 204, 85), rgb(196, 80, 80));
+        background: radial-gradient(farthest-side at 110% 380px, #D9CC55, #C45050);
+        background: -webkit-radial-gradient(110% 380px, circle closest-corner, #D9CC55, #C45050);
+           background: -moz-radial-gradient(110% 380px, circle closest-corner, #D9CC55, #C45050);
     }
 
 #lines{
@@ -272,6 +293,7 @@ a:active #zHeney{
         display: none;
     }
     #lines{
+        background-image: url('pict/lines2.png');
         top: 0px;
         height: 726px;
     }
@@ -285,10 +307,10 @@ a:active #zHeney{
 
 #splash{
     background-image: url('pict/splash.png');
-    height: 468px;
+    height: 469px;
     width: 310px;
     top: 0px;
-    right: 0;
+    right: -1px;
     z-index: 0;
 }
 
@@ -324,16 +346,16 @@ a:active #zHeney{
 }
 
 #contacts{
+    background: -moz-linear-gradient(top,  rgba(150,127,87,0) 41%, rgba(62,53,49,0.3) 100%),url('pict/contactsBackground.png') 2px 90px no-repeat;
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(41%,rgba(150,127,87,0)), color-stop(100%,rgba(62,53,49,0.3))),url('pict/contactsBackground.png') 2px 90px no-repeat;
+    background: -webkit-linear-gradient(top,  rgba(150,127,87,0) 41%,rgba(62,53,49,0.3) 100%),url('pict/contactsBackground.png') 2px 90px no-repeat;
+    background: -o-linear-gradient(top,  rgba(150,127,87,0) 41%,rgba(62,53,49,0.3) 100%),url('pict/contactsBackground.png') 2px 90px no-repeat;
+    background: -ms-linear-gradient(top,  rgba(150,127,87,0) 41%,rgba(62,53,49,0.3) 100%),url('pict/contactsBackground.png') 2px 90px no-repeat;
+    background: linear-gradient(to bottom,  rgba(150,127,87,0) 41%,rgba(62,53,49,0.3) 100%),url('pict/contactsBackground.png') 2px 90px no-repeat;
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00967f57', endColorstr='#4d3e3531',GradientType=0 );
     
-    background-color: #2C271A;
-    background: url('pict/contactsBackground.png') 2px 90px no-repeat, -moz-linear-gradient(left, #4b4537 0%, #252116 100%);
-    background: url('pict/contactsBackground.png') 2px 90px no-repeat, -webkit-gradient(linear, left top, right top, color-stop(0%,#4b4537), color-stop(100%,#252116));
-    background: url('pict/contactsBackground.png') 2px 90px no-repeat, -webkit-linear-gradient(left, #4b4537 0%,#252116 100%);
-    background: url('pict/contactsBackground.png') 2px 90px no-repeat, -o-linear-gradient(left, #4b4537 0%,#252116 100%);
-    background: url('pict/contactsBackground.png') 2px 90px no-repeat, -ms-linear-gradient(left, #4b4537 0%,#252116 100%);
-    background: url('pict/contactsBackground.png') 2px 90px no-repeat, linear-gradient(to right, #4b4537 0%,#252116 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4b4537', endColorstr='#252116',GradientType=1 );
-
+    background-color: #AEA080;
+    border-top-left-radius: 15% 10%;
     display: inline-block;
     width: 255px;
     height: 480px;
@@ -343,28 +365,29 @@ a:active #zHeney{
 }
 
     #contacts p {
-        line-height: 0.7;
+    line-height: 1;
     }
         #contacts p a{
             font-family: 'Alegreya Sans SC', sans-serif;
             vertical-align: -webkit-baseline-middle;
-            text-shadow: -3px 3px 0px #413B2F, -4px 5px 0px rgb(144, 123, 85);
+            text-shadow: -2px 2px 9px rgba(65, 59, 47, 0.18), -3px 2px 3px rgba(47, 47, 47, 0.02);
         }
     
             #contacts p:first-child a{
                 font-size: 25px;
-                color: #84A3E1;
+                color: #464031;
             }
             #contacts p:nth-child(2){ 
             }   
             #contacts p:nth-child(2) a{
                 font-size: 50px;
-                color: #6E9ED0;    
+                color: #4B4536;    
             }
             #contacts p:nth-child(3) a{
                 font-size: 22px;
-                color: #C1D1BC;    
-            }        
+                color: #E1D5B0;    
+            }   
+
 
 /***************** RIGHTSIDE *******************/
 
@@ -414,9 +437,16 @@ a:active #zHeney{
             background-image: url('pict/ballBrown.png');
         }
         #ballGreen{
-            display: none;
-            background-image: url('pict/ballBrown.png');
+            display: block;
+            background-image: url('pict/ballGreen.png');
         }
+
+    #bGround{
+        position: absolute;
+        display: block;
+        height: 100%;
+        width: 100%;
+    }
     
     @media all and (max-width: 980px) {
         #boomFace, #ballBrown, #ballGreen {
@@ -462,3 +492,13 @@ a:active #zHeney{
         top: 100px;
         background-color: #4B4536;
     }
+    #wave {
+        height: 33px;
+        width: 100%;
+        top: 86px;
+        position: absolute;
+        background: url('pict/wave.png');
+        background-size: 15px 15px;
+        background-repeat-y: no-repeat;
+    }
+
